Audio does not Scrub, plays fully instead #37293

Closed
opened 2013-11-02 17:34:37 +01:00 by David Andrade · 17 comments

%%%--- Operating System, Graphics card ---
Mac Pro, Early 2008
OSX Mavericks 10.9
NVIDIA GeForce GTX 680 2GB RAM

Also occurs on MacBookPro, Mid-2010, OSX Mavericks 10.9 with a NVIDIA GeForce 330M

- Blender version with error, and version that worked ---

Blender 2.68, Blender 2.69
Seems to be broken on all Blender versions

- Short description of error ---

Attempting to scrub audio will play the entire audio file. Note that this does not play the animation, but if you were to hit Alt+A you would see the Timeline pointer stop further down the Timeline.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. In VSE, Add a Sound file
  2. In Timeline, make sure Playback>Audio Scrubbing is checked on
  3. Scrub the frames the sound file covers. Audio will play instead of scrubbing.
  4. While the audio is playing (remember you are just scrubbing) hit Alt+A and you'll notice the Timeline pointer has moved farther down

I attached nonstop_audio.blend
Simply try and scrub the timeline in an OSX Mavericks environment and you should hear the problem.%%%

%%%--- Operating System, Graphics card --- Mac Pro, Early 2008 OSX Mavericks 10.9 NVIDIA GeForce GTX 680 2GB RAM Also occurs on MacBookPro, Mid-2010, OSX Mavericks 10.9 with a NVIDIA GeForce 330M - Blender version with error, and version that worked --- Blender 2.68, Blender 2.69 Seems to be broken on all Blender versions - Short description of error --- Attempting to scrub audio will play the entire audio file. Note that this does not play the animation, but if you were to hit Alt+A you would see the Timeline pointer stop further down the Timeline. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. In VSE, Add a Sound file 2. In Timeline, make sure Playback>Audio Scrubbing is checked on 3. Scrub the frames the sound file covers. Audio will play instead of scrubbing. 4. While the audio is playing (remember you are just scrubbing) hit Alt+A and you'll notice the Timeline pointer has moved farther down I attached nonstop_audio.blend Simply try and scrub the timeline in an OSX Mavericks environment and you should hear the problem.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Cannot confirm that on Linux (Debian64 testing), here it works OK. Any Mac user to confirm the issue?%%%

%%%Cannot confirm that on Linux (Debian64 testing), here it works OK. Any Mac user to confirm the issue?%%%
Author
%%%I had one other: http://blenderartists.org/forum/showthread.php?316492-Blender-animators-beware-of-Mavericks%%%

%%%I have a MacBook Pro (2011 I think) and I have this exact same issue, but only after I installed OSX Mavericks.%%%

%%%I have a MacBook Pro (2011 I think) and I have this exact same issue, but only after I installed OSX Mavericks.%%%
Author

%%%Spent sometime on #blendercoders with jensverwiebe and found a possible workaround:
File> User Preferences. Go to System Tab, change 'Sound' to SDL.
or using OpenAL, change Mixing Buffer to 512

"The new OpenAL audio backend timestretches audio so it doesn't stutter"%%%

%%%Spent sometime on #blendercoders with jensverwiebe and found a possible workaround: File> User Preferences. Go to System Tab, change 'Sound' to SDL. or using OpenAL, change Mixing Buffer to 512 "The new OpenAL audio backend timestretches audio so it doesn't stutter"%%%
Member

%%%Jens Verwiebe and I hunted the bug for 5 hours, thanks Jens! Fixed in revision 61196. Closing.%%%

%%%Jens Verwiebe and I hunted the bug for 5 hours, thanks Jens! Fixed in revision 61196. Closing.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @PeterLuxus

Added subscriber: @PeterLuxus

Please open this bug again, because I can confirm this bug on my system too.
With the installation of the new OS Maverick 10.9.2 all my Blender versions have this problem, from 2.5 till 2.69.

I add a MP3 or WAV File (tried both) and set up playback with audio scrubbing only. When I click on the timeline the sound starts to play and does not stop anymore. The play Icon is still inactive. In order to stop it I click once on play then again on stop.

Anyway I tried the workaround and finally it works. But maybe then SDL should be set up as default?

Please open this bug again, because I can confirm this bug on my system too. With the installation of the new OS Maverick 10.9.2 all my Blender versions have this problem, from 2.5 till 2.69. I add a MP3 or WAV File (tried both) and set up playback with audio scrubbing only. When I click on the timeline the sound starts to play and does not stop anymore. The play Icon is still inactive. In order to stop it I click once on play then again on stop. Anyway I tried the workaround and finally it works. But maybe then SDL should be set up as default?

@PeterLuxus I’m not 100% sure, but I’d bet r61196 is after 2.69 release. Please test with latest 2.70RC1 (or a build from http://builder.blender.org/download).

@PeterLuxus I’m not 100% sure, but I’d bet r61196 is after 2.69 release. Please test with latest 2.70RC1 (or a build from http://builder.blender.org/download).

Hi mont29,

I've tried today 2.70 and the same problem appeared.

Additionally in 2.70 the textures are not visible in the viewport and in the rendered image too.
Are 2.69 and 2.70 not compatible?

But with the workaround I can work.

Hi mont29, I've tried today 2.70 and the same problem appeared. Additionally in 2.70 the textures are not visible in the viewport and in the rendered image too. Are 2.69 and 2.70 not compatible? But with the workaround I can work.

Added subscriber: @jensverwiebe

Added subscriber: @jensverwiebe

@neXyon or @jensverwiebe, can you please try to reproduce again?

@PeterLuxus:

Additionally in 2.70 the textures are not visible in the viewport and in the rendered image too.
Are 2.69 and 2.70 not compatible?

Eeeh… this sounds like a whole other thing, please open a new report with precise info about it (OS, GPU, demo file...).

@neXyon or @jensverwiebe, can you please try to reproduce again? @PeterLuxus: > Additionally in 2.70 the textures are not visible in the viewport and in the rendered image too. > Are 2.69 and 2.70 not compatible? Eeeh… this sounds like a whole other thing, please open a new report with precise info about it (OS, GPU, demo file...).
Member

I retested with 2.70RC1 on OSX 10.9.2 and cannot reproduce the issue.
As i participated in fixing, i 'am 100% sure this cannot happen animore,
since we fixed a "buffer-looping" issue.

This bug including missing textures must be a complete different thing.
Please check over your setup.

Jens

I retested with 2.70RC1 on OSX 10.9.2 and cannot reproduce the issue. As i participated in fixing, i 'am 100% sure this cannot happen animore, since we fixed a "buffer-looping" issue. This bug including missing textures must be a complete different thing. Please check over your setup. Jens

This issue was referenced by blender/blender-addons-contrib@b977cfd28b

This issue was referenced by blender/blender-addons-contrib@b977cfd28bd2896e9be7709e8b4b1e4713511ff7

This issue was referenced by b977cfd28b

This issue was referenced by b977cfd28bd2896e9be7709e8b4b1e4713511ff7
Member

I hope this commit will fix the problem. Maybe you can try it by building your own build? Otherwise you'll probably have to wait for 2.71 or it might get added to the final release of 2.70 in case there are more RCs.

I hope this commit will fix the problem. Maybe you can try it by building your own build? Otherwise you'll probably have to wait for 2.71 or it might get added to the final release of 2.70 in case there are more RCs.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37293
No description provided.