Fix for [#37293] Audio does not Scrub, plays fully instead